--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bumpalo = "3.14.0"
 fixedbitset = "0.4.2"
+id-arena = "2.2.1"
 petgraph = "0.6.4"
 thiserror = "1.0.50"
